--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/sw.js"
+              "src/sw.js",
+              "src/manifest.json"
             ],
             "styles": [
               "src/styles.css"
@@ -79,7 +80,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/sw.js"
+              "src/sw.js",
+              "src/manifest.json"
             ]
           }
         },
